syntax = "proto3";
package profile_occupation;

option go_package = "nfxid/protos/gen/auth/profile_occupation;profileoccupationpb";

import "buf/validate/validate.proto";
import "google/protobuf/timestamp.proto";

// 职业信息
message ProfileOccupation {
  string id = 1; // 职业ID (UUID)
  string profile_id = 2; // 资料ID (UUID)
  string company = 3; // 公司名称
  string position = 4; // 职位
  optional string department = 5; // 部门
  optional string industry = 6; // 行业
  optional string location = 7; // 工作地点
  optional string employment_type = 8; // 雇佣类型：full-time, part-time, contract, etc.
  optional string start_date = 9; // 开始日期 (DATE)
  optional string end_date = 10; // 结束日期 (DATE)
  bool is_current = 11; // 是否当前工作
  optional string description = 12; // 描述
  optional string responsibilities = 13; // 职责
  optional string achievements = 14; // 成就
  repeated string skills_used = 15; // 使用的技能列表
  google.protobuf.Timestamp created_at = 16; // 创建时间
  google.protobuf.Timestamp updated_at = 17; // 更新时间
  optional google.protobuf.Timestamp deleted_at = 18; // 软删除时间
}

// ProfileOccupation 服务
service ProfileOccupationService {
  // 根据ID获取职业信息
  rpc GetProfileOccupationByID (GetProfileOccupationByIDRequest) returns (GetProfileOccupationByIDResponse);
  
  // 根据ProfileID获取职业信息列表
  rpc GetProfileOccupationsByProfileID (GetProfileOccupationsByProfileIDRequest) returns (GetProfileOccupationsByProfileIDResponse);
  
  // 获取所有职业信息列表
  rpc GetAllProfileOccupations (GetAllProfileOccupationsRequest) returns (GetAllProfileOccupationsResponse);
}

// ProfileOccupation Service Messages
message GetProfileOccupationByIDRequest {
  string id = 1 [(buf.validate.field).string.uuid = true];
}

message GetProfileOccupationByIDResponse {
  ProfileOccupation profile_occupation = 1;
}

message GetProfileOccupationsByProfileIDRequest {
  string profile_id = 1 [(buf.validate.field).string.uuid = true];
}

message GetProfileOccupationsByProfileIDResponse {
  repeated ProfileOccupation profile_occupations = 1;
}

message GetAllProfileOccupationsRequest {
  int32 page = 1 [(buf.validate.field).int32.gte = 1];
  int32 page_size = 2 [(buf.validate.field).int32 = {gte: 1, lte: 100}];
  optional string profile_id = 3 [(buf.validate.field).string.uuid = true];
  optional string search = 4; // 搜索公司名称、职位等
  optional bool is_current = 5;
  optional string industry = 6; // 按行业过滤
  optional string employment_type = 7; // 按雇佣类型过滤
}

message GetAllProfileOccupationsResponse {
  repeated ProfileOccupation profile_occupations = 1;
  int32 total = 2;
}

